--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,29 @@
-version: '3'
-services:
-  redis:
-    image: redis:latest
-    container_name: redis-server
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./data:/data
+version: "3.9"
 
-  redisinsight:
-    image: redis/redisinsight:latest
-    container_name: redis-insight
+services:
+  mongo:
+    image: mongo
+    restart: always
+    container_name: mongo
     ports:
-      - "5540:5540"
-    depends_on:
-      - redis
-    
-  jupyter:
-    image: jupyter/scipy-notebook
-    container_name: jupyter
-    ports:
-      - "8888:8888"
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
-      - ./notebooks:/home/jovyan/work
-    command:
-      start-notebook.sh --NotebookApp.token=''
+      - mongodb_data:/data/db
+
+  python:
+    build: .
+    container_name: etl
+    volumes:
+      - ./etl:/app
+      - ./data:/data
+    depends_on:
+      - mongo
+    env_file:
+      - .env
+    command: ["python", "/app/etl.py"]
 
 volumes:
-  redis_data:
+  mongodb_data:
